# bookshelf

./: CODE_OF_CONDUCT.md  LICENSE  README.md  SECURITY.md
Bookshelf/: CMakeLists.txt
Bookshelf/source/: ansi_manager.cpp  ansi_manager.hpp  application.cpp  application.hpp  books_manager.cpp  books_manager.hpp  commands.cpp  commands.hpp  console.cpp  console.hpp  file_manager.cpp  file_manager.hpp  main.cpp  screens.cpp  screens.hpp  utils.cpp  utils.hpp
